01_introduction/templating/simple/traefik-stripprefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: intro-app-ing
spec:
  stripPrefix:
    prefixes:
      - "/echo"
    forceSlash: false
