01_introduction/templating/simple/kube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: intro-app-svc
  labels:
    me: wojtek
spec:
  ports:
  - port: 80
    protocol: TCP
    name: http
  selector:
    app: intro-app
